<resources>
    <string name="app_name">SoftGym</string>
    <string name="quot">The Perfect Mind In The Healthy Body</string>
    <string name="right">All Rights Reserved</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Legal Notice</string>
    <string name="about0">About Us</string>
    <string name="about1">
        With his experience of more than 10 years in the field sabine the professional sports coach. Favoring quality over quanti
        .Specialized in sports coaching at home for over 10 years, SABINE also offers Visio Coaching and online coaching.For each of these services,
        only one watchword: the tailor-made!</string>
    <string name="about5text">Un coaching 100 % personnalisé !</string>
    <string name="about5">
        Se faire accompagner par un véritable coach sportif professionnel c’est bien… avec un suivi individuel c’est encore mieux !Bénéficier des
        services d’un entraîneur qui s’occupe uniquement de vous c’est la garantie de progresser plus vite en évitant tout risque de blessure.Votre
        programme est 100 % personnalisé, en fonction de vos objectifs mais également de vos capacités et disponibilités.Votre coach est toujours à vos
        côtés, pour vous motiver, et à votre écoute, pour ajuster votre entraînement si besoin.
    </string>
    <string name="sabine_softgym">Sabine SoftGym</string>
    <string name="goal">Reach Your Goals With A Professional Sports Coach</string>
    <string name="goalText">
        Sabine Soft GYM is a competent and professional sports coach who offers you a high quality service.Due to its training and experience, sabine
        will offer you a sports program adapted and customized according to your abilities, availability and objectives.Discover our different offers:
        online coaching and Visio Coaching.
    </string>
    <string name="Exper">Experience</string>
    <string name="experText">
        With her experience of more than 10 years in the field sabine the professional sports coach.Favoring quality over quantity.Specialized in
        sports coaching at home for over 10 years, SABINE also offers Video Coaching and online coaching.
    </string>
    <string name="Reasons">3 Reasons To Start Your Subscription</string>
    <string name="Professionalism">Professionalism</string>
    <string name="OnlineCoaching">Online Coaching</string>
    <string name="LoginForMore">Subscribe</string>
    <string name="benefice">Get professional support remotely</string>
    <string name="buttonformulaire">Discover</string>
    <string name="benefice2">Get the best tools to succeed</string>
    <string name="beneficeText">
        Thanks to our online video we offer you an all-in-one online coaching service to achieve your goals: a training program adapted to your
        abilities and objectives, nutritional monitoring, interactive interface, progress monitoring, encouragement and challenges to stay motivated
        … all accessible from your smartphone, tablet, computer, wherever and whenever you want!
    </string>
    <string name="choixFormulaire">Choose your Online Coaching Formula</string>
    <string name="package3mois">3 Months Package</string>
    <string name="price3mois">14,90 €/Month</string>
    <string name="package6mois">6 Months Package</string>
    <string name="price6mois">12,90 €/Month</string>
    <string name="package12mois">12 Months Package</string>
    <string name="price12mois">9,90 €/Month</string>
    <string name="packagecontent">Complete virtual training
        Standard training program
        Create your own sessions
        Advanced nutrition system
        Personal and group challenges
        Progress monitoring</string>
    <string name="total3mois">44.70 €</string>
    <string name="total6mois">77.40 €</string>
    <string name="total12mois">118.80 €</string>
    <string name="SignIN">Sign In</string>
    <string name="Login">Log In</string>
    <string name="CreateAccount">Create Account</string>
    <string name="DontHaveAccount">Dont Have An Account?</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="Name">Name</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="EmailAddress">Email Address</string>
    <string name="ConfirmEmailAddress">Confirm Email Address</string>
    <string name="Address">Address</string>
    <string name="City">City</string>
    <string name="Country">Country</string>
    <string name="postalZipCode">Postal/Zip Code</string>
    <string name="Phone">Phone</string>
    <string name="Register">Register</string>
    <string name="Cancel">Cancel</string>
    <string name="Welcome">SoftGym</string>
    <string name="title_activity_profile">profile</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="todo">hh</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Apropos">
        Marketing Concept Sarl, a Web and Communication Development Agency in Marrakech, has a dynamic team of specialists whose goal is to provide you
        with a complete range of services and strategies related to web development, and who work full time at the realization, management and SEO of
        websites.Marketing Concept Sarl is specialized in web design and SEO and offers various services and allow you to have not only a stylish and
        fast website, but also to be listed among the top sites lists in most major search engines such as Google, Yahoo, Bing Envoyer des commentaires
        Historique, Enregistré, Communauté
    </string>
    <string name="banner_ad_unit_id">ca-app-pub-8004564561830355~1203769567</string>
    <string name="chapter_1">Chapter 1 :</string>
    <string name="title_activity_adminside1">ADMINside1</string>
    <string name="contact_us">Contact Us</string>
    <string name="status">Status</string>
    <string name="days">Days</string>
    <string name="approved">Approved</string>
    <string name="home">Home</string>
    <string name="online_coaching">Online Coaching</string>
    <string name="disconnect">Disconnect</string>
    <string name="edit_profile">Edit profile</string>
    <string name="more_info">More info</string>
    <string name="share">Share</string>
    <string name="music">Music</string>
    <string name="assistance">Assistance</string>
    <string name="calendar">Calendar</string>
    <string name="practice">Practice</string>
    <string name="developer_name">GHOUDAN AYOUB</string>
    <string name="copyright">Copyright © 2019 APATCH 2.0 \nAll right reserved</string>
    <string name="pref_category_notif">Notifications</string>
    <string name="pref_category_other">Others</string>
    <string name="pref_title_notif">Push Notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_more">More Apps</string>
    <string name="pref_title_rate">Rate</string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_copyright">Copyright</string>
    <string name="pref_title_dev_name">Developed By</string>
    <string name="pref_title_term">Term &amp; Policies</string>
    <string name="pref_key_notif">key_notifications</string>
    <string name="pref_key_ringtone">key_ringtone</string>
</resources>