<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_online"
            android:icon="@drawable/ic_video_black_24dp"
            android:title="@string/online_coaching" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_disconnect"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/disconnect" />
    </group>
</menu>
